First commited as before_79241_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,8 +188,7 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
-GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
+GitHistoryPage_FindTooltip=Show Find Toolbar
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -681,7 +680,6 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
-HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -756,8 +754,7 @@ RepositoryJob_NullStatus=Internal error: job ''{0}'' returned a null status.
 RepositoryJobResultAction_RepositoryGone=Cannot find git repository ''{0}'' anymore: result cannot be shown.
 ShowPushResultAction_name=Show Push Result...
 
-PushJob_cantConnectToAny=Can''t connect to any repository: {0}
-PushJob_unexpectedError=Unexpected error occurred.
+PushWizard_cantConnectToAny=Can''t connect to any repository: {0}
 PushWizard_cantPrepareUpdatesMessage=Can't resolve ref specifications locally (local refs changed?) or create tracking ref update.
 PushWizard_cantPrepareUpdatesTitle=Preparing Ref Updates Error
 PushWizard_cantSaveMessage=Couldn't save specified specifications in configuration file.
@@ -765,6 +762,7 @@ PushWizard_cantSaveTitle=Configuration Storage Warning
 PushWizard_jobName=Pushing to {0}
 PushWizard_missingRefsMessage=Ref specifications don't match any source ref (local refs changed?).
 PushWizard_missingRefsTitle=Missing Refs Error
+PushWizard_unexpectedError=Unexpected error occurred.
 PushWizard_windowTitleDefault=Push to Another Repository
 PushWizard_windowTitleWithDestination=Push to: {0}
 
