--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -6220,14 +6220,4 @@
         </with>
      </definition>
   </extension>
-  <extension
-        point="org.eclipse.ui.services">
-     <sourceProvider
-           provider="org.eclipse.egit.ui.internal.selection.RepositorySourceProvider">
-        <variable
-              name="org.eclipse.egit.ui.currentRepository"
-              priorityLevel="activeWorkbenchWindow">
-        </variable>
-     </sourceProvider>
-  </extension>
-</plugin>
+  plugin>
