First commited as before_79655_rev3

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -6244,4 +6244,14 @@
         </with>
      </definition>
   </extension>
-  plugin>
+  <extension
+        point="org.eclipse.ui.services">
+     <sourceProvider
+           provider="org.eclipse.egit.ui.internal.selection.RepositorySourceProvider">
+        <variable
+              name="org.eclipse.egit.ui.currentRepository"
+              priorityLevel="activeWorkbenchWindow">
+        </variable>
+     </sourceProvider>
+  </extension>
+</plugin>
