--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -652,7 +652,7 @@ ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' stat
 ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
-ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
+ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.\n\nDo you want to continue?
 ResetTargetSelectionDialog_ResetQuestion=Confirm Reset
 ResetTargetSelectionDialog_ResetTitle=Reset: {0}
 ResetTargetSelectionDialog_ResetTypeGroup=Reset type
@@ -756,8 +756,7 @@ RepositoryJob_NullStatus=Internal error: job ''{0}'' returned a null status.
 RepositoryJobResultAction_RepositoryGone=Cannot find git repository ''{0}'' anymore: result cannot be shown.
 ShowPushResultAction_name=Show Push Result...
 
-PushJob_cantConnectToAny=Can''t connect to any repository: {0}
-PushJob_unexpectedError=Unexpected error occurred.
+PushWizard_cantConnectToAny=Can''t connect to any repository: {0}
 PushWizard_cantPrepareUpdatesMessage=Can't resolve ref specifications locally (local refs changed?) or create tracking ref update.
 PushWizard_cantPrepareUpdatesTitle=Preparing Ref Updates Error
 PushWizard_cantSaveMessage=Couldn't save specified specifications in configuration file.
@@ -765,6 +764,7 @@ PushWizard_cantSaveTitle=Configuration Storage Warning
 PushWizard_jobName=Pushing to {0}
 PushWizard_missingRefsMessage=Ref specifications don't match any source ref (local refs changed?).
 PushWizard_missingRefsTitle=Missing Refs Error
+PushWizard_unexpectedError=Unexpected error occurred.
 PushWizard_windowTitleDefault=Push to Another Repository
 PushWizard_windowTitleWithDestination=Push to: {0}
 
@@ -1103,11 +1103,10 @@ BranchOperationUI_CheckoutRemoteTrackingTitle=Check out remote-tracking branch
 BranchOperationUI_Continue=Continue
 BranchOperationUI_DetachedHeadTitle=Detached HEAD
 BranchOperationUI_DetachedHeadMessage=You are in the 'detached HEAD' state. This means that you don't have a local branch checked out.\n\nYou can look around, but it's not recommended to commit changes. The reason is that these commits would not be on any branch and would not be visible after checking out another branch.\n\nIf you want to make changes, create or checkout a local branch first.
-LaunchFinder_RunningLaunchDontShowAgain=Don't show this warning again
-LaunchFinder_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository.
-LaunchFinder_RunningLaunchTitle=Running Launch
-LaunchFinder_SearchLaunchConfiguration=Search running launch configuration
-LaunchFinder_ContinueQuestion=Continue all the same?
+BranchOperationUI_RunningLaunchDontShowAgain=Don't show this warning again
+BranchOperationUI_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository. Continue branch switch?
+BranchOperationUI_RunningLaunchTitle=Running Launch
+BranchOperationUI_SearchLaunchConfiguration=Search running launch configuration
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
@@ -1289,7 +1288,7 @@ DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
-DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
+DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored. Are you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
 Disconnect_disconnect=Disconnect
 
@@ -1866,7 +1865,6 @@ SubmoduleSyncCommand_SyncError=Submodule configuration sync error
 SubmoduleSyncCommand_Title=Synchronized submodule configuration
 SubmoduleUpdateCommand_Title=Updating submodules
 SubmoduleUpdateCommand_UpdateError=Submodule update error
-SubmoduleUpdateCommand_UncommittedChanges=Cannot Update Submodule Repository ''{0}''
 
 SynchronizeWithMenu_custom=&Custom...
 SynchronizeFetchJob_JobName=Fetching changes before synchronization launch
