First commited as after_80559_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1243,6 +1243,8 @@ DeleteResourcesOperationUI_confirmActionMessage=Are you sure you want to delete 
 DeleteResourcesOperationUI_deleteFailed=Deleting resources failed
 
 IgnoreActionHandler_addToGitignore=Add to .gitignore
+IgnoreActionHandler_manyFilesToBeIgnoredTitle=Ignoring {0} files
+IgnoreActionHandler_manyFilesToBeIgnoredQuestion=Adding many files to .gitignore will slow down most subsequent git operations. Consider editing .gitignore manually and excluding files using wildcard matches or excluding whole directories.\n\nDo you want to continue all the same?
 
 RepositoriesView_BranchDeletionFailureMessage=Branch deletion failed
 RepositoriesView_Branches_Nodetext=Branches
@@ -1824,6 +1826,7 @@ StagingView_UnstageItemMenuLabel=&Remove from Index
 StagingView_UnstagedSort=Sort by state
 StagingView_StageItemMenuLabel=&Add to Index
 StagingView_IgnoreItemMenuLabel=&Ignore
+StagingView_IgnoreFolderMenuLabel=Ignore &Folder
 StagingView_DeleteItemMenuLabel=&Delete
 StagingView_Presentation=Presentation
 StagingView_List=List
