First commited as after_81297_rev3

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1089,7 +1089,6 @@ BranchAction_repositoryState=Repository state: {0}
 BranchConfigurationDialog_BranchConfigurationTitle=Git Branch Configuration
 BranchConfigurationDialog_EditBranchConfigMessage=Edit the upstream configuration for branch {0}
 BranchConfigurationDialog_ExceptionGettingRefs=Exception getting Refs
-BranchConfigurationDialog_RebaseLabel=&Rebase
 BranchConfigurationDialog_RemoteLabel=Rem&ote:
 BranchConfigurationDialog_SaveBranchConfigFailed=Could not save branch configuration
 BranchConfigurationDialog_UpstreamBranchLabel=Upstream &Branch:
@@ -1105,6 +1104,10 @@ LaunchFinder_RunningLaunchMessage=The launch configuration ''{0}'' is currently 
 LaunchFinder_RunningLaunchTitle=Running Launch
 LaunchFinder_SearchLaunchConfiguration=Search running launch configuration
 LaunchFinder_ContinueQuestion=Continue all the same?
+BranchRebaseMode_Rebase=Rebase
+BranchRebaseMode_Preserve=Rebase preserving merge commits
+BranchRebaseMode_Interactive=Rebase interactively
+BranchRebaseMode_None=Merge
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
@@ -1417,9 +1420,7 @@ UnmergedBranchDialog_Title=Confirm Branch Deletion
 Untrack_untrack=Untrack
 UpstreamConfigComponent_ConfigureUpstreamCheck=Configure &upstream for push and pull
 UpstreamConfigComponent_ConfigureUpstreamToolTip=This will connect the local branch with its remote branch for pushing and pulling.
-UpstreamConfigComponent_MergeRadio=&Merge upstream commits into local branch
-UpstreamConfigComponent_PullGroup=When doing a pull
-UpstreamConfigComponent_RebaseRadio=&Rebase commits of local branch onto upstream
+BranchRebaseModeCombo_RebaseModeLabel=When pulling:
 
 TagAction_cannotCheckout=Cannot checkout now
 TagAction_cannotGetBranchName=Cannot get actual branch name
