--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -707,6 +707,19 @@
 				<visibleWhen
 						checkEnabled="false">
 					<and>
+                        <with variable="activeMenu">
+                            <not>
+                                <iterate operator="or">
+                                    <equals value="#AbstractTextEditorRulerContext" />
+                                </iterate>
+                            </not>
+                        </with>
+						<with variable="org.eclipse.egit.ui.currentRepository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</with>
 						<reference
 								definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
 						</reference>
@@ -728,6 +741,19 @@
 				<visibleWhen
 						checkEnabled="false">
 					<and>
+                        <with variable="activeMenu">
+                            <not>
+                                <iterate operator="or">
+                                    <equals value="#AbstractTextEditorRulerContext" />
+                                </iterate>
+                            </not>
+                        </with>
+						<with variable="org.eclipse.egit.ui.currentRepository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</with>
 						<reference
 								definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
 						</reference>
