First commited as before_81572_rev13

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1472,7 +1472,9 @@ CommitEditorInput_ToolTip=''{0}'' - Commit in repository {1}
 CommitEditorPage_JobName=Loading commit ''{0}''
 CommitEditorPage_SectionBranchesEmpty=Branches
 CommitEditorPage_LabelAuthor={0} <{1}> on {2}
+CommitEditorPage_LabelAuthorRelative={0} <{1}>, {2}
 CommitEditorPage_LabelCommitter={0} <{1}> on {2}
+CommitEditorPage_LabelCommitterRelative={0} <{1}>, {2}
 CommitEditorPage_LabelParent=Parent:
 CommitEditorPage_LabelTags=Tags:
 CommitEditorPage_SectionBranches=Branches ({0})
