--- a/org.eclipse.egit.ui/plugin.properties
+++ b/org.eclipse.egit.ui/plugin.properties
@@ -367,8 +367,8 @@ NavigationActionSet.label = Git Navigation Actions
 OpenCommitAction.tooltip = Open Git Commit...
 OpenCommitAction.label = Open Git Commit...
 OpenCommit.name = Open Git Commit
-ShowBlameAction_label = &Show Annotations
-ShowBlameCommand.name = Show Annotations
+ShowBlameAction_label = &Show Revision Information
+ShowBlameCommand.name = Show Revision Information
 
 GitVariable_git_dir=The path to the .git directory for the selected or named resource
 GitVariable_git_repo_relative_path=Path of the selected or named resource relative to the Git repository
