--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -60,7 +60,7 @@ BlameInformationControl_Commit=Commit {0}
 BlameInformationControl_Committer=Committer: {0} <{1}> {2}
 BlameInformationControl_DiffHeaderLabel=Diff to {0} {1}
 BlameInformationControl_OpenCommitLink=(<a>open commit</a>)
-BlameInformationControl_ShowAnnotationsLink=(<a>show revision information</a>)
+BlameInformationControl_ShowAnnotationsLink=(<a>show annotations</a>)
 BlameInformationControl_ShowInHistoryLink=(<a>show in history</a>)
 AssumeUnchanged_assumeUnchanged=Assume Unchanged
 WizardProjectsImportPage_ImportProjectsTitle=Import Projects
@@ -188,7 +188,8 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindTooltip=Show Find Toolbar
+GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
+GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -327,9 +328,9 @@ RebaseInteractiveStepActionToolBarProvider_EditText=Edit
 RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
 RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
-RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
+RebaseInteractiveStepActionToolBarProvider_MoveDownText=Down
 RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
-RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
+RebaseInteractiveStepActionToolBarProvider_MoveUpText=Up
 RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
 RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
@@ -680,6 +681,7 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
+HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -1044,6 +1046,8 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
+CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
+CommittingPreferencePage_general=General
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
@@ -1515,7 +1519,7 @@ CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
 CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Working Tree Version
 StagingView_CompareWithIndexMenuLabel=Compare with Index
-CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Revision Information
+CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
 CommitFileDiffViewer_ShowInHistoryLabel=Focus On This File
 CommitGraphTable_CommitId=Id
 CommitGraphTable_Committer=Committer
