--- a/org.eclipse.egit-feature/feature.properties
+++ b/org.eclipse.egit-feature/feature.properties
@@ -6,13 +6,14 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Git Integration for Eclipse
+featureName=Eclipse Git Team Provider
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse EGit Update Site
 
 # description property - text of the "Feature Descrption"
-description=Git Integration for Eclipse
+description=\
+An Eclipse Git Team provider in pure Java.\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
@@ -23,6 +24,3 @@ are made available under the terms of the Eclipse Public License v1.0\n\
 which accompanies this distribution, and is available at\n\
 http://www.eclipse.org/legal/epl-v10.html\n
 ################ end of copyright property ####################################
-
-support.egit.name=Git Integration for Eclipse
-support.egit.description=Versioning with Git, integration with Gerrit, GitHub, Gitflow and Task repositories
