--- a/org.eclipse.egit.mylyn-feature/feature.properties
+++ b/org.eclipse.egit.mylyn-feature/feature.properties
@@ -6,13 +6,14 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Git Integration for Eclipse - Task focused interface
+featureName=Eclipse Git Team Provider - Task focused interface
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse EGit Update Site
 
-# description property - text of the "Feature Description"
-description=Task-focused interface for Git Integration in Eclipse
+# description property - text of the "Feature Descrption"
+description=\
+Mylyn-EGit integration providing a task-focused interface for Eclipse Git Team Provider.\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
