--- a/org.eclipse.egit.source-feature/feature.properties
+++ b/org.eclipse.egit.source-feature/feature.properties
@@ -6,7 +6,7 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Git Integration for Eclipse - Source Code
+featureName=Eclipse Git Team Provider - Source Code
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse EGit Update Site
