--- a/org.eclipse.egit-feature/feature.properties
+++ b/org.eclipse.egit-feature/feature.properties
@@ -6,14 +6,13 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Eclipse Git Team Provider
+featureName=Git Integration for Eclipse
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse EGit Update Site
 
 # description property - text of the "Feature Descrption"
-description=\
-An Eclipse Git Team provider in pure Java.\n
+description=Git Integration for Eclipse
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
@@ -24,3 +23,6 @@ are made available under the terms of the Eclipse Public License v1.0\n\
 which accompanies this distribution, and is available at\n\
 http://www.eclipse.org/legal/epl-v10.html\n
 ################ end of copyright property ####################################
+
+support.egit.name=Git Integration for Eclipse
+support.egit.description=Versioning with Git, integration with Gerrit, GitHub, Gitflow and Task repositories
