--- a/org.eclipse.egit.ui/plugin.properties
+++ b/org.eclipse.egit.ui/plugin.properties
@@ -10,7 +10,7 @@
 #    Daniel Megert <daniel_megert@ch.ibm.com> - Removed two duplicate keys - http://bugs.eclipse.org/364013
 ###############################################################################
 
-plugin_name=Git Team Provider UI
+plugin_name=Git Integration for Eclipse - UI
 provider_name=Eclipse EGit
 
 Git=Git
