--- a/org.eclipse.egit/plugin.properties
+++ b/org.eclipse.egit/plugin.properties
@@ -6,5 +6,5 @@
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
-plugin_name=Git Team Provider
+plugin_name=Git Integration for Eclipse
 provider_name=Eclipse EGit
