First commited as after_81713_rev2

--- a/org.eclipse.egit.mylyn-feature/feature.properties
+++ b/org.eclipse.egit.mylyn-feature/feature.properties
@@ -6,14 +6,13 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Eclipse Git Team Provider - Task focused interface
+featureName=Git integration for Eclipse - Task focused interface
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse EGit Update Site
 
-# description property - text of the "Feature Descrption"
-description=\
-Mylyn-EGit integration providing a task-focused interface for Eclipse Git Team Provider.\n
+# description property - text of the "Feature Description"
+description=Task-focused interface for Git Integration in Eclipse
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
