--- a/org.eclipse.egit-feature/feature.properties
+++ b/org.eclipse.egit-feature/feature.properties
@@ -6,14 +6,13 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Eclipse Git Team Provider
+featureName=Git integration for Eclipse
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse EGit Update Site
 
 # description property - text of the "Feature Descrption"
-description=\
-An Eclipse Git Team provider in pure Java.\n
+description=Versioning with Git, integration with Gerrit, GitHub, Gitflow and Task repositories
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
