--- a/org.eclipse.egit.ui/plugin.properties
+++ b/org.eclipse.egit.ui/plugin.properties
@@ -10,11 +10,8 @@
 #    Daniel Megert <daniel_megert@ch.ibm.com> - Removed two duplicate keys - http://bugs.eclipse.org/364013
 ###############################################################################
 
-plugin_name=Git integration for Eclipse - UI
+plugin_name=Git Team Provider UI
 provider_name=Eclipse EGit
-
-support.egit.name=Git integration for Eclipse
-support.egit.description=Versioning with Git, integration with Gerrit, GitHub, Gitflow and Task repositories
 
 Git=Git
 
