First commited as after_81713_rev4

--- a/org.eclipse.egit.ui/plugin.properties
+++ b/org.eclipse.egit.ui/plugin.properties
@@ -10,8 +10,11 @@
 #    Daniel Megert <daniel_megert@ch.ibm.com> - Removed two duplicate keys - http://bugs.eclipse.org/364013
 ###############################################################################
 
-plugin_name=Git Team Provider UI
+plugin_name=Git integration for Eclipse - UI
 provider_name=Eclipse EGit
+
+support.egit.name=Git integration for Eclipse
+support.egit.description=Versioning with Git, integration with Gerrit, GitHub, Gitflow, and Task repositories
 
 Git=Git
 
