--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -314,8 +314,6 @@ CompareUtils_jobName=Git Compare...
 CompareUtils_errorGettingEncoding=Getting encoding failed
 CompareUtils_errorGettingHeadCommit=Getting HEAD commit failed
 CompareUtils_wrongResourceArgument=Given argument is neither a file nor a link: {1}
-CompareIndexWithHeadActionHandler_nothingToDoTitle=Nothing to compare
-CompareIndexWithHeadActionHandler_fileNotStaged=File {0} is not staged
 
 RebaseCurrentRefCommand_RebaseCanceledMessage=The rebase operation was canceled
 RebaseCurrentRefCommand_RebasingCurrentJobName=Rebasing Branch {0} on {1}
@@ -382,6 +380,7 @@ RebaseResultDialog_StatusAborted=Aborted
 RebaseResultDialog_StatusConflicts=Checkout conflict
 RebaseResultDialog_StatusFailed=Failed
 RebaseResultDialog_StatusFastForward=Fast-forward
+RebaseResultDialog_StatusLabel=Result status: {0}
 RebaseResultDialog_StatusNothingToCommit=Nothing to commit
 RebaseResultDialog_StatusInteractivePrepared=Interactive rebase has been prepared
 RebaseResultDialog_StatusOK=OK
@@ -1471,7 +1470,9 @@ CommitEditorInput_ToolTip=''{0}'' - Commit in repository {1}
 CommitEditorPage_JobName=Loading commit ''{0}''
 CommitEditorPage_SectionBranchesEmpty=Branches
 CommitEditorPage_LabelAuthor={0} <{1}> on {2}
+CommitEditorPage_LabelAuthorRelative={0} <{1}>, {2}
 CommitEditorPage_LabelCommitter={0} <{1}> on {2}
+CommitEditorPage_LabelCommitterRelative={0} <{1}>, {2}
 CommitEditorPage_LabelParent=Parent:
 CommitEditorPage_LabelTags=Tags:
 CommitEditorPage_SectionBranches=Branches ({0})
