First commited as before_82010_rev8

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1414,6 +1414,8 @@ UIUtils_CollapseAll=Collapse All
 UIUtils_ExpandAll=Expand All
 UIUtils_PressShortcutMessage=Press {0} or begin typing to see a filtered list of previously used values (use "*" as wildcard)
 UIUtils_StartTypingForPreviousValuesMessage=Start typing to see a filtered list of previously used values (use "*" as wildcard)
+UIUtils_PressShortcutForRemoteRefMessage=Press {0} or begin typing to see a filtered list of available refs
+UIUtils_StartTypingForRemoteRefMessage=Start typing to see a filtered list of available refs
 UIUtils_ShowInMenuLabel=Sho&w In
 UnmergedBranchDialog_Message=Not all commits of these branches have been merged into the currently checked out branch.\n\nDo you still want to delete these branches?
 UnmergedBranchDialog_Title=Confirm Branch Deletion
