--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -60,7 +60,7 @@ BlameInformationControl_Commit=Commit {0}
 BlameInformationControl_Committer=Committer: {0} <{1}> {2}
 BlameInformationControl_DiffHeaderLabel=Diff to {0} {1}
 BlameInformationControl_OpenCommitLink=(<a>open commit</a>)
-BlameInformationControl_ShowAnnotationsLink=(<a>show annotations</a>)
+BlameInformationControl_ShowAnnotationsLink=(<a>show revision information</a>)
 BlameInformationControl_ShowInHistoryLink=(<a>show in history</a>)
 AssumeUnchanged_assumeUnchanged=Assume Unchanged
 WizardProjectsImportPage_ImportProjectsTitle=Import Projects
@@ -1472,7 +1472,9 @@ CommitEditorInput_ToolTip=''{0}'' - Commit in repository {1}
 CommitEditorPage_JobName=Loading commit ''{0}''
 CommitEditorPage_SectionBranchesEmpty=Branches
 CommitEditorPage_LabelAuthor={0} <{1}> on {2}
+CommitEditorPage_LabelAuthorRelative={0} <{1}>, {2}
 CommitEditorPage_LabelCommitter={0} <{1}> on {2}
+CommitEditorPage_LabelCommitterRelative={0} <{1}>, {2}
 CommitEditorPage_LabelParent=Parent:
 CommitEditorPage_LabelTags=Tags:
 CommitEditorPage_SectionBranches=Branches ({0})
@@ -1523,7 +1525,7 @@ CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
 CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Working Tree Version
 StagingView_CompareWithIndexMenuLabel=Compare with Index
-CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
+CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Revision Information
 CommitFileDiffViewer_ShowInHistoryLabel=Focus On This File
 CommitGraphTable_CommitId=Id
 CommitGraphTable_Committer=Committer
