--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -314,6 +314,8 @@ CompareUtils_jobName=Git Compare...
 CompareUtils_errorGettingEncoding=Getting encoding failed
 CompareUtils_errorGettingHeadCommit=Getting HEAD commit failed
 CompareUtils_wrongResourceArgument=Given argument is neither a file nor a link: {1}
+CompareIndexWithHeadActionHandler_nothingToDoTitle=Nothing to compare
+CompareIndexWithHeadActionHandler_fileNotStaged=File {0} is not staged
 
 RebaseCurrentRefCommand_RebaseCanceledMessage=The rebase operation was canceled
 RebaseCurrentRefCommand_RebasingCurrentJobName=Rebasing Branch {0} on {1}
